@@ -6,6 +6,7 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -15,11 +16,11 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.authentication.logout.LogoutHandler;
 import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
-import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 import com.updateshub.security.JwtAuthenticationFilter;
@@ -35,7 +36,8 @@ public class SecurityConfig {
     private final LogoutHandler logoutHandler;
     private final UserRepository userRepository;
 
-    public SecurityConfig(JwtAuthenticationFilter jwtAuthFilter, LogoutHandlerImpl logoutHandler, UserRepository userRepository) {
+    public SecurityConfig(JwtAuthenticationFilter jwtAuthFilter, LogoutHandlerImpl logoutHandler,
+            UserRepository userRepository) {
         this.jwtAuthFilter = jwtAuthFilter;
         this.logoutHandler = logoutHandler;
         this.userRepository = userRepository;
@@ -45,34 +47,37 @@ public class SecurityConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource())) // ✅ Enable CORS
-                .csrf(csrf -> csrf.disable()) // Disable CSRF for APIs
+                .csrf(csrf -> csrf.disable()) // ❌ Disable CSRF (use only for APIs)
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // ✅ Stateless sessions
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(new AntPathRequestMatcher("/api/auth/**")).permitAll() // Public auth endpoints
-                        .requestMatchers(new AntPathRequestMatcher("/api/notes/**")).authenticated() // Secure notes endpoints
-                        .requestMatchers(new AntPathRequestMatcher("/api/review/**")).authenticated()
-                        .requestMatchers(new AntPathRequestMatcher("/public/**")).permitAll() // Public endpoints
-                        .requestMatchers(new AntPathRequestMatcher("/api/**")).authenticated()) // Secure API routes
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                        .requestMatchers("/api/auth/**").permitAll() // ✅ Allow login & register
+                        .requestMatchers("/public/**").permitAll() // ✅ Public endpoints
+                        .requestMatchers("/dashboard.html").authenticated()
+                        .requestMatchers("/api/**").authenticated()
+                        .anyRequest().authenticated()) // 🔒 Secure all other API routes
                 .authenticationProvider(authenticationProvider())
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
                 .logout(logout -> logout
-                        .logoutUrl("/api/auth/logout")
+                        .logoutUrl("/api/auth/logout") // ✅ Logout endpoint
                         .addLogoutHandler(logoutHandler)
                         .logoutSuccessHandler((request, response, authentication) -> response.setStatus(200)));
 
         return http.build();
     }
 
+    // 🔐 Password encoder using BCrypt
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
+    // 🔑 UserDetailsService implementation
     @Bean
     public UserDetailsService userDetailsService() {
         return new UserDetailsServiceImpl(userRepository);
     }
 
+    // ⚙️ Authentication provider using DAO
     @Bean
     public AuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
@@ -81,22 +86,28 @@ public class SecurityConfig {
         return provider;
     }
 
+    // 🔑 AuthenticationManager Bean
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
         return authConfig.getAuthenticationManager();
     }
 
-    // ✅ CORS Configuration
+    // 🌍 CORS Configuration (Allow frontend to access API)
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration corsConfig = new CorsConfiguration();
-        corsConfig.setAllowedOrigins(List.of("http://127.0.0.1:5500", "http://localhost:5500")); // Allow frontend origin
-        corsConfig.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Allow all HTTP methods
-        corsConfig.setAllowedHeaders(List.of("Authorization", "Content-Type")); // Allow necessary headers
-        corsConfig.setAllowCredentials(true); // Allow credentials (e.g., cookies)
+        corsConfig.setAllowedOrigins(Arrays.asList(
+                "http://127.0.0.1:5500",
+                "http://localhost:5500",
+                "http://localhost:3000" // ✅ Allow frontend
+        ));
+        corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        corsConfig.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Access-Control-Allow-Origin"));
+        corsConfig.setExposedHeaders(Arrays.asList("Authorization")); // ✅ Ensure JWT is accessible
+        corsConfig.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", corsConfig); // Apply CORS to all endpoints
+        source.registerCorsConfiguration("/**", corsConfig);
         return source;
     }
 }
